# rag-demo

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.dev-notes/: 2025-12-02.md  2025-12-06.md  2025-12-15.md  2025-12-16.md  2025-12-17.md  2025-12-18.md  2025-12-19.md  2025-12-20.md  2025-12-23.md  2025-12-25.md  2025-12-27.md  2026-01-01.md
.github/: dependabot.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/data/evaluation/: run_evaluation.py  test_queries_hard.json  test_queries_light.json  test_queries_medium.json
backend/app/data/regulations/: リモートワーク規程.md  休暇規程.md  服務規程.md  福利厚生規程.md  経費精算規程.md  通勤手当規程.md
backend/app/data/regulations-optimized/: リモートワーク規程_アルバイト.md  リモートワーク規程_パート.md  リモートワーク規程_正社員.md  休暇規程_アルバイト.md  休暇規程_パート.md  休暇規程_正社員.md  服務規程_アルバイト.md  服務規程_パート.md  服務規程_正社員.md  福利厚生規程_アルバイト.md  福利厚生規程_パート.md  福利厚生規程_正社員.md  経費精算規程_アルバイト.md  経費精算規程_パート.md  経費精算規程_正社員.md  通勤手当規程_アルバイト.md  通勤手当規程_パート.md  通勤手当規程_正社員.md
backend/app/data/sample_documents/: company_info.txt  policies.txt  products.txt
backend/app/models/: schemas.py
backend/app/routers/: chat.py  documents.py  evaluation.py  health.py
backend/app/services/: document_preprocessor.py  document_service.py  embedding_service.py  question_generator.py  rag_service.py  reranker_service.py  vectorstore_service.py
backend/app/utils/: errors.py  line_tracker.py  rate_limiter.py
backend/tests/: conftest.py  test_health.py
frontend/lib/: api.ts  (+2 more)
(+75 files in other folders)
